--- a/presto/install
+++ b/presto/install
@@ -1,6 +1,76 @@
 #!/usr/bin/ruby
 
-require 'json'
+#--- Begin Usage-- #
+# users would call this to run a bootstrap action on EMR
+# these commands are samples.
+
+#---
+# elastic-mapreduce --create \
+# --name "Presto" \
+#--alive \
+#--hive-interactive \
+#--ami-version 3.1.0 \
+#--num-instances 4 \
+#--master-instance-type i2.2xlarge \
+#--slave-instance-type i2.2xlarge \
+#--bootstrap-action s3://presto-bucket/install_presto_0.71.rb \
+#--args "-t","1GB","-l","DEBUG","-j","-server \
+#-Xmx1G -XX:+UseConcMarkSweepGC \
+#-XX:+ExplicitGCInvokesConcurrent \
+#-XX:+AggressiveOpts \
+#-XX:+HeapDumpOnOutOfMemoryError \
+#-XX:OnOutOfMemoryError=kill \
+#-9 %p \
+#-Dhive.config.resources=/home/hadoop/conf/core-site.xml,/home/hadoop/conf/hdfs-site.xml","-v","0.72","-s","1GB","-a","1h","-p","http://central.maven.org/maven2/com/facebook/presto/" \
+# --bootstrap-name "Install Presto"
+
+# then ssh to the master node of the cluster and run the following commands to try out Presto
+
+#Create and set up a test table in hive
+
+# $ hive
+
+## Create Hive table
+#DROP TABLE IF EXISTS apachelog;
+#CREATE EXTERNAL TABLE apachelog (
+#  host STRING,
+#  IDENTITY STRING,
+#  USER STRING,
+#  TIME STRING,
+#  request STRING,
+#  STATUS STRING,
+#  SIZE STRING,
+#  referrer STRING,
+#  agent STRING 
+#)
+#PARTITIONED BY(iteration_no int)
+#LOCATION 's3://publicprestodemodata/apachelogsample/hive';
+ 
+#ALTER TABLE apachelog RECOVER PARTITIONS;
+ 
+## Test Hive
+#select * from apachelog where iteration_no=101 limit 10;
+ 
+## Exit Hive
+#exit
+
+##Start Presto and run a test query:
+
+## Set Presto Pager to null for clean display
+#export PRESTO_PAGER=
+ 
+# Launch Presto
+#./presto --catalog hive
+ 
+## Show tables to prove that Presto is seeing Hive's tables
+#show tables;
+ 
+## Run test query in Presto
+#select * from apachelog where iteration_no=101 limit 10;
+#--- END Usage-- #
+
+
+require 'json'                                                                                                                                                                                                                       
 require 'emr/common'
 require 'digest'
 require 'optparse'
@@ -20,6 +90,24 @@ def sudo(cmd)
   run("sudo #{cmd}")
 end
 
+#writeGemRc
+def writeGemRc
+  println "Writting .gemrc..."
+  File.open('/tmp/gemrc','w') do |file_w|
+    file_w.write(":ssl_verify_mode: 0")
+  end
+  sudo "mv /tmp/gemrc /etc/gemrc"
+end
+
+#remove .gemrc
+def cleanGemRc
+  println "cleaning .gemrc"
+  sudo "rm -rf /etc/gemrc"
+end
+
+writeGemRc
+#sudo "gem env"
+#run "gem env"
 #get the install command to use
 def checkInstallCmd
   system("which apt-get")
@@ -50,7 +138,6 @@ rescue LoadError
   Gem.clear_paths
   require "uuidtools"
 end
-
 #global variables
 job_flow = Emr::JsonInfoFile.new('job-flow')
 instance_info = Emr::JsonInfoFile.new('instance')
@@ -60,7 +147,7 @@ $master_private_dns = job_flow['masterPrivateDnsName'].to_s
 # bucketName is a token that will be replaced by the s3 artifact deployer by the actual bucket name where this file is uploaded
 $bucket_name = "{{bucketName}}"
 
-$presto_s3repo_url="http://#{$bucket_name}.s3.amazonaws.com/libs/presto/"
+$presto_s3repo_url="https://s3-us-west-2.amazonaws.com/presto-bucket/"
 $presto_run_dir="/mnt/var/run/presto"
 $presto_log_dir="/mnt/var/log/presto"
 $presto_install_dir="/home/hadoop/.versions"
@@ -71,6 +158,7 @@ def parseOptions
     :memory => "1GB",
     :log_level => "DEBUG",
     :jvm_conf => "-server -Xmx1G -XX:+UseConcMarkSweepGC -XX:+ExplicitGCInvokesConcurrent -XX:+AggressiveOpts -XX:+HeapDumpOnOutOfMemoryError -XX:OnOutOfMemoryError=kill -9 %p -Dhive.config.resources=/home/hadoop/conf/core-site.xml,/home/hadoop/conf/hdfs-site.xml",
+    :sink_max_buffer_memory => "1GB"
   }
 
   opt_parser = OptionParser.new do |opt|
@@ -89,6 +177,18 @@ def parseOptions
 
     opt.on("-v",'--version VERSION',"Presto version (Required)") do |version|
       configurable_options[:version] = version
+    end
+
+    opt.on("-s",'--sink-buffer-size SINK_BUFFER_SIZE',"Sink Maximum Buffer Size") do |sink_max_buffer_memory|
+      configurable_options[:sink_max_buffer_memory] = sink_max_buffer_memory
+    end
+
+    opt.on("-a",'--query-max-age QUERY_MAX_AGE',"Query Maximum Age") do |query_max_age|
+      configurable_options[:query_max_age] = query_max_age
+    end
+
+    opt.on("-m",'--query-max-history QUERY_MAX_HISTORY',"Query Maximum History") do |query_max_hist|
+      configurable_options[:query_max_hist] = query_max_hist
     end
 
     opt.on("-p",'--presto-repo-url PRESTO_REPO_URL',"Presto repo URL (maven repo Ex: http://central.maven.org/maven2/com/facebook/presto/)") do |presto_repo_url|
@@ -135,7 +235,7 @@ def writePrestoJVMConfig(jvm_config, presto_root)
 end
 
 #write [presto_home]/etc/config.properties
-def writePrestoConfigProperties(task_memory, presto_root)
+def writePrestoConfigProperties(configurable_options, presto_root)
   println "Writting config properties for presto to   #{$presto_install_dir}/#{presto_root}/etc/config.properties..."
   File.open('/tmp/temp_config.properties','w') do |file_w|
     if $is_master
@@ -146,11 +246,16 @@ def writePrestoConfigProperties(task_memory, presto_root)
       file_w.write("coordinator=false\n")
       file_w.write("datasources=jmx,hive\n")
     end
-    file_w.write("task.max-memory=#{task_memory}\n")
+    file_w.write("task.max-memory=#{configurable_options[:memory]}\n")
     file_w.write("discovery.uri=http://#{$master_private_dns}:8080\n")
-    file_w.write("presto-metastore.db.type=h2\n")
     file_w.write("http-server.http.port=8080\n")
-    file_w.write("presto-metastore.db.filename=/mnt/var/presto/db/metastore\n")
+    file_w.write("sink.max-buffer-size=#{configurable_options[:sink_max_buffer_memory]}\n")
+    unless configurable_options[:query_max_age].nil?
+      file_w.write("query.max-age=#{configurable_options[:query_max_age]}\n")
+    end
+    unless configurable_options[:query_max_hist].nil?
+      file_w.write("query.max-history=#{configurable_options[:query_max_hist]}\n")
+    end
   end
   sudo "mv /tmp/temp_config.properties #{$presto_install_dir}/#{presto_root}/etc/config.properties"
 end
@@ -186,8 +291,9 @@ end
 #make symlinks for hadoop-lzo and presto-server home
 def makeSymlinks(presto_version)
   println "Making Symlinks..."
+  lzo_file = Dir.glob("/home/hadoop/share/hadoop/common/lib/*hadoop-lzo.jar")[0]
   hives = (`ls /home/hadoop/.versions/presto-server-#{presto_version}/plugin`).split(/\r?\n/).select{|i| i.start_with?("hive")}
-  hives.each { |x| sudo "ln -s /home/hadoop/share/hadoop/common/lib/hadoop-lzo-0.4.15.jar /home/hadoop/.versions/presto-server-#{presto_version}/plugin/#{x}/hadoop-lzo-0.4.15.jar" }
+  hives.each { |x| sudo "ln -s #{lzo_file} /home/hadoop/.versions/presto-server-#{presto_version}/plugin/#{x}/hadoop-lzo.jar" }
   sudo "ln -s /home/hadoop/.versions/presto-server-#{presto_version}/ /home/hadoop/presto-server"
 end
 
@@ -234,7 +340,7 @@ def installPresto
   sudo "mkdir #{$presto_log_dir}"
   writeNodeProperties(presto_root)
   writePrestoJVMConfig(configurable_options[:jvm_conf],presto_root)
-  writePrestoConfigProperties(configurable_options[:memory],presto_root)
+  writePrestoConfigProperties(configurable_options,presto_root)
   writePrestoLogProperties(configurable_options[:log_level],presto_root)
 
   writeJMXProperties(presto_root)
@@ -323,3 +429,4 @@ installPresto
 writePrestoFilesForServiceNanny
 s3LogJsonUpdate
 reloadServiceNanny
+cleanGemRc
